# AI

./: .gitignore  Dockerfile  Pipfile  README.md  install_info.txt  main.py  middleware.py  pyproject.toml  pytest.ini  requirements.txt  start.sh
.github/workflows/: main.yml  mk.yml
LLMs/bard/: bard_test.ipynb
LLMs/langchain/: chains.py  chatbot.py  execute_conversation.py  generator.py  memory.py  prompts.py  prompts_data.py  prompts_scenario.py  prompts_schema.py  prompts_user.py  tools.py  tts.py
app/: main.py
app/api/: pages_router.py
app/core/: swagger_config.py
app/langchain/: execute_conversation.py  generator.py
app/lib/: logging_config.py
app/resources/: interrogation_test.html
app/schemas/: etc_schema.py  game_schema.py  scenario_crud_schema.py  scenario_router_schema.py  user_router_schema.py
app/services/: game_management.py  game_service.py  hint_investigation.py  interrogation.py  interrogation_service.py  investigation_service.py  question_generation.py  scenario_generation.py  scenario_service.py  user_service.py
app/utils/: memory.py  (+3 more)
discord_bot/: command.py  discord_bot.py  message_format.py
docs/: .env_ex  API_calculate.ipynb  API_calculate_v2.ipynb  input_format.ipynb  make_personal.ipynb  npc_to_npc.ipynb  prompt_test.ipynb  test.py
lang_agency/: chains.py  chatbot.py  memory.py  prompts.py  tools.py
lib/: chat_management.py  check_api_key.py  const.py  npc_management.py  response_format_check.py  validation_check.py
practice/: practice.py  practice_schema.py  user_crud.py
tests/: etc_test.py
tts/: main.py  tts.py
(+58 files in other folders)
